Start på sådan fungerer det siden

--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ main h2, main h1 {
     font-family: 'headerFont';
     letter-spacing: 2px;
     color: var(--dark-blue);
+    font-weight: 250;
 }
 
 main p {
@@ -235,6 +236,17 @@ main p {
 /*************************************************************************************************************************************/
 /********************************************************* SÅDAN FUNGERER DET ********************************************************/
 /*************************************************************************************************************************************/
+
+.undersideh1 {
+    font-size: 4rem;
+    line-height: 160px;
+    margin: 2rem;
+}
+
+.nudel-billede {
+    width: 900px;
+}
+
 
 
 /*************************************************************************************************************************************/
