--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h1, h2, h3 {
     font-weight: 250;
     color: var(--dark-blue);
     letter-spacing: 2px;
+    text-align: center;
 }
 
 /* Anvender :root til at sætte farverne (dette er smart, så man nemt kan ændre alle af den samme farve på siden) */
@@ -288,9 +289,9 @@ main .pv {
 /*************************************************************************************************************************************/
 
 .undersideh1 {
-    font-size: 4rem;
+    font-size: 6rem;
     line-height: 10rem;
-    margin: 2rem;
+    margin: 3rem;
 }
 
 .infographic {
@@ -311,79 +312,88 @@ main .pv {
 }
 
 .computer {
-    width: 15rem;
+    width: 20rem;
     margin-bottom: -2rem;
 }
 
 .besog-nippon{
     position: absolute;
-    margin-top: 20rem;
-    margin-right: 38rem;
-
+    margin-top: 18rem;
+    margin-right: 45rem;
+    text-align: center;
 }
 
+
+
 .retter {
-    width: 18rem;
+    width: 20rem;
 }
 
 .vaelg-maaltidskasse {
     position: absolute;
-    margin-top: 38rem;
-    margin-left: 38rem;
+    margin-top: 37rem;
+    margin-left: 45rem;
+    text-align: center;
 }
 
+
 .ur{
-    width: 15rem;
-    margin-bottom: -2rem;
+    width: 18rem;
+    margin-bottom: -2.5rem;
 }
 
 .levering {
     position: absolute;
-    margin-top: 57rem;
-    margin-right: 30rem;   
+    margin-top: 55rem;
+    margin-right: 35rem;   
+    text-align: center;
 }
 
 .dor {
-    width: 12rem;
+    width: 18rem;
 }
 
 .levering-dor{
     position: absolute;
-    margin-top: 72rem;
-    margin-left: 32rem;
+    margin-top: 70rem;
+    margin-left: 35rem;
+    text-align: center;
 }
 
 .pan {
-    width: 15rem;
+    width: 18rem;
 }
 
 .madlavning {
     position: absolute;
-    margin-top: 95rem;
-    margin-right: 35rem;
+    margin-top: 92rem;
+    margin-right: 38rem;
+    text-align: center;
 }
 
 
 .mad {
-    width: 15rem;
+    width: 18rem;
     margin-bottom: -2rem;
 }
 
 .maaltid{
     position: absolute;
-    margin-top: 110rem;
-    margin-left: 30rem;
+    margin-top: 108rem;
+    margin-left: 33rem;
+    text-align: center;
 }
 
 .skraldespande {
-    width: 15rem;
+    width: 18rem;
     margin-bottom: -2.5rem;
 }
 
 .genbrug {
     position: absolute;
-    margin-top: 128rem;
-    margin-right: 33rem;
+    margin-top: 125rem;
+    margin-right: 37rem;
+    text-align: center;
 }
 
 
