--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-h1, h2, h3 {
+h1, h2 {
     font-family: "headerFont";
     font-weight: 250;
     color: var(--dark-blue);
@@ -298,19 +298,38 @@ main p {
     justify-content: space-between;
     border: 1px solid #024158;
     border-radius: 100px;
+    display: flex;
+    flex-direction: column;
   }
   
   .faq-answer {
     display: none;
     padding: 10px;
-    background-color: #FFF9F2;
-    border: 1px solid #024158; /* Tilføjet en solid grænse med farve #024158 */
-    border-radius: 100px;
   }
   
+  .faq-pil {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+  }
+
+  .faq-pil h2 {
+    justify-self: center;
+  }
+
   /* Styler "arrow", der indikerer, at det er klikbart */
   .arrow {
     font-size: 18px;
+  }
+
+  /* Styler boksen i baggrunden */
+  .baggrundsboks {
+    background-color: #CEDFE3;
+    border: 3px solid #024158;
+    border-radius: 0.6rem;
+    width: 72rem;
+    height: 88rem;
+
   }
 
   /* Styler tekst nederst på siden */
