--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@ h1, h2 {
     text-align: center;
 }
 
+h1 {
+    font-size: 8rem;
+    line-height: 10rem;
+    margin: 3rem;
+}
+
 /* Anvender :root til at sætte farverne (dette er smart, så man nemt kan ændre alle af den samme farve på siden) */
 :root {
     --dark-blue: #024158;
@@ -453,6 +459,8 @@ main .pv {
 /*************************************************************************************************************************************/
 /**************************************************************** FAQ ****************************************************************/
 /*************************************************************************************************************************************/
+
+/* Styler bokse med spørgsmål og svar */
 
 .faq-container {
     width: 300px;
