--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,7 @@ main .pv {
     margin-top: 4rem;
     margin-bottom: 6rem;
     height: 148rem;
+    width: 80%;
 }
 
 /* Animation for the visible class */
