--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ main .pv {
 }
 /* Velkommen slut */
 
-/* Vores måltidskasser start */
+/* FORSIDE Vores måltidskasser start */
 .h1f {
     display: flex;
     justify-content: center;
@@ -236,6 +236,7 @@ main .pv {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     width: 1148px;
     height: 656px;
     border-radius: 10px;
@@ -248,6 +249,7 @@ main .pv {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    margin: 0 6.44rem 0 6.44rem;
 }
 
 .kasse {
@@ -255,11 +257,13 @@ main .pv {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 3rem;
     width: 269px;
     height: 313px;
     border-radius: 10px;
     border: 3px solid var(--dark-blue);
     background: var(--beige);
+    color: var(--dark-blue);
 }
 
 .kasse .kas {
@@ -285,20 +289,22 @@ main .pv {
 }
 
 .bestil {
-    width: 10%;
-    height: 10%;
+    width: 17.25rem;
+    height: 5rem;
+    border-radius: 0.625rem;
+    font-size: 2.25rem;
+    color: var(--beige);
+    background-color: var(--dark-blue);
 }
-/* Vores måltidskasser slut */
+/* FORSIDE Vores måltidskasser slut */
 
-/* Vidste du start */
+/* FORSIDE Vidste du start */
 .nobg {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     width: 1148px;
-    height: 656px;
-    border-radius: 10px;
-    border: 3px solid var(--dark-blue);   
+    height: 656px; 
 } 
 
 .nobg h2 {
@@ -309,23 +315,178 @@ main .pv {
 .nobg p {
     text-align: center;
     font-size: 1.625rem;
-    line-height: 3.125rem; /* 192.308% */
+    line-height: 3.125rem;
+    color: var(--dark-blue);
 }
-/* Vidste du slut */
+/* FORSIDE Vidste du slut */
 
-/* Sådan fungerer det start */
+/* FORSIDE Sådan fungerer det start */
+.kant h2 {
+    font-family: 'headerFont';
+    letter-spacing: 2px;
+    color: var(--dark-blue);
+    font-weight: 250;
+    font-size: 50px;
+}
+
 .kant {
     display: flex;
-    width: 70%;  
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 71.75rem;
+    height: 27.625rem;
+    border-radius: 10px;
+    border: 3px solid var(--dark-blue);
 }
 
-.kant img {
+.infog {
+    display: flex;
+    flex-direction: column;
+}
+
+.nudel {
+    display: flex;
+    justify-content: center;
+    width: 71.75rem;
+    height: 12.4375rem;
+    z-index: 2;
+}
+.infob {
     display: flex;
     flex-direction: row;
-    width: 25%;
+    justify-content: space-around;
+    margin-top: -12rem;
 }
 
-/* Sådan fungerer det slut */
+.graphic {
+    width: 13.13919rem;
+    height: 12.5rem;
+    z-index: 3;
+}
+/* FORSIDE Sådan fungerer det slut */
+
+/* FORSIDE Tilmeld dig button */
+.tilmeld {
+    width: 17.25rem;
+    height: 5rem;
+    border-radius: 0.625rem;
+    font-size: 2.25rem;
+    color: var(--beige);
+    background-color: var(--dark-blue);
+    margin: 5.38rem;    
+}
+
+/* FORSIDE FAQ start */
+.solid h2 {
+    font-family: 'headerFont';
+    letter-spacing: 2px;
+    color: var(--dark-blue);
+    font-weight: 250;
+    font-size: 50px;
+}
+
+.faqa {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.faqa p {
+    text-align: center;
+    font-size: 1.625rem;
+    color: var(--dark-blue);
+}
+
+.sporgsmal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.faqa .sporgsmal p {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    margin: 1rem;
+    font-size: 1.25rem;
+}
+
+.faqa .sporgsmal .svar {
+    margin: 1rem;
+    font-size: 1.25rem;
+    width: 40.1875rem;
+    height: 4.5625rem;
+    border-radius: 6.25rem;
+    border: 2px solid var(--dark-blue);
+    background: var(--light-blue);
+}
+/* FORSIDE FAQ slut */
+
+/* FORSIDE Anmeldelser + Bæredygtighed start */
+.kanta {
+    display: flex;
+    flex-direction: row;
+}
+
+.kantak {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 33.1875rem;
+    height: 21.875rem;
+    border-radius: 10px;
+    border: 3px solid var(--dark-blue);
+}
+
+.kantak p {
+    text-align: center;
+    color: var(--dark-blue);
+}
+
+.kantak .genbrugf {
+    width: 11.375rem;
+    height: 11.375rem;
+}
+/* FORSIDE Anmeldelser + Bæredygtighed slut */
+
+/* FORSIDE Tilmeld dig her start */
+.tilmeldkasse {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.solid input {
+    color: var(--dark-blue);
+    width: 23.3125rem;
+    height: 4.25rem;
+    border-radius: 6.25rem;
+    border: 2px solid var(--dark-blue);
+    background: var(--beige);
+    padding: 1.81rem;
+}
+
+    /* Gør at placeholdertekst i input feltet er mørke blå */
+::placeholder {
+    color: var(--dark-blue);
+  }
+
+.tilmeldinput {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.solid .kassef {
+    width: 25.125rem;
+    height: 21.5625rem;
+}
+/* FORSIDE Tilmeld dig her slut */
 
 /*************************************************************************************************************************************/
 /*********************************************************** YASAI KASSEN ************************************************************/
