--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ main .pv {
     color: var(--dark-blue);
     font-weight: 250;
     font-size: 50px;
+    margin: 0;
 }
 
 .solid {
@@ -255,7 +256,7 @@ main .pv {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin: 0 6.44rem 0 6.44rem;
+    /* margin: 0 6.44rem 0 6.44rem; */
 }
 
 .kasse {
@@ -297,6 +298,7 @@ main .pv {
 .bestil {
     width: 17.25rem;
     height: 5rem;
+    margin-bottom: 3.69rem;
     border-radius: 0.625rem;
     font-size: 2.25rem;
     color: var(--beige);
@@ -486,6 +488,18 @@ main .pv {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.inputborder {
+    display: flex;
+    padding: 2rem;
+    width: 27.5625rem;
+    height: 25rem;
+    border-radius: 0.625rem;
+    border: 2px solid var(--dark-blue);
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem;
 }
 
 .solid .kassef {
