Tilføjelse af succes siden + styling

--- a/css/style.css
+++ b/css/style.css
@@ -597,6 +597,33 @@ main .pv {
 /********************************************************** SUCCES/ANNULLERET ********************************************************/
 /*************************************************************************************************************************************/
 
+.succes {
+    height: 35rem;
+    border-radius: 0.625rem;
+    border: 3px solid #D33D34;
+    background: #FFF9F2;
+    width: 30rem;
+    text-align: center;
+    margin: 5rem;
+    padding-top: 2rem;
+}
+
+.succes-titel {
+    font-size: 7rem;
+    margin: 0;
+}
+
+.succes-ikon {
+    width: 10rem;
+    margin-bottom: 2rem;
+}
+
+.succes p {
+    color: #024158;
+    font-size: 16px;
+    padding: 0.5rem;
+}
+
 
 /*************************************************************************************************************************************/
 /*************************************************************** FOOTER **************************************************************/
