--- a/css/style.css
+++ b/css/style.css
@@ -1058,7 +1058,9 @@ main .pv {
 }
 
 .link-annulleret {
-    
+    text-decoration: none;
+    color: #024158;
+    font-weight: bold;
 }
 
 /*************************************************************************************************************************************/
