--- a/css/style.css
+++ b/css/style.css
@@ -747,11 +747,15 @@ main .pv {
 /********************************************************* SÅDAN FUNGERER DET ********************************************************/
 /*************************************************************************************************************************************/
 
+/* styler overskriften */
+
 .undersideh1 {
     font-size: 6rem;
     line-height: 10rem;
     margin: 3rem;
 }
+
+/* styler teksten */
 
 .info-sadan-fungerer-det {
     display: flex;
@@ -766,6 +770,8 @@ main .pv {
     margin-bottom: 1rem;
 }
 
+/* styler sektionen, og den boks der er omkring */
+
 .infographic {
     display: flex;
     justify-content: center;
@@ -779,7 +785,7 @@ main .pv {
     width: 80%;
 }
 
-/* Animation for the visible class */
+/* Styler at animationen bliver vidst løbende med at man scroller ned, er også brugt js */
 .infographic > section {
     opacity: 0;
     transform: translateY(20px);
@@ -790,6 +796,8 @@ main .pv {
     opacity: 1;
     transform: translateY(0);
   }
+
+  /* styler indholdet i infographic */
 
 .spisepinde {
     width: 850px;
@@ -808,8 +816,6 @@ main .pv {
     text-align: center;
 }
 
-
-
 .retter {
     width: 20rem;
 }
@@ -820,7 +826,6 @@ main .pv {
     margin-left: 45rem;
     text-align: center;
 }
-
 
 .ur{
     width: 18rem;
@@ -856,7 +861,6 @@ main .pv {
     text-align: center;
 }
 
-
 .mad {
     width: 18rem;
     margin-bottom: -2rem;
@@ -880,6 +884,8 @@ main .pv {
     margin-right: 37rem;
     text-align: center;
 }
+
+/* styler teksten */
 
 .tekst-infographic {
     font-weight: 300;
@@ -1001,6 +1007,9 @@ main .pv {
 /********************************************************** SUCCES/ANNULLERET ********************************************************/
 /*************************************************************************************************************************************/
 
+
+/* Styler boksen omkring sektionen  */
+
 .succes {
     height: 35rem;
     border-radius: 0.625rem;
@@ -1012,6 +1021,8 @@ main .pv {
     padding-top: 2rem;
 }
 
+/* styler indholdet i boksen */
+
 .succes-titel {
     font-size: 7rem;
     margin: 0;
@@ -1021,6 +1032,8 @@ main .pv {
     width: 10rem;
     margin-bottom: 2rem;
 }
+
+/* styler links */
 
 .succes p {
     color: #024158;
@@ -1041,6 +1054,8 @@ main .pv {
     padding-top: 2rem;
 }
 
+/* styler indholdet i sektionen */
+
 .annulleret-titel {
     font-size: 7rem;
     margin: 0;
@@ -1056,6 +1071,8 @@ main .pv {
     font-size: 16px;
     padding: 0.5rem;
 }
+
+/* styler links */
 
 .link-annulleret {
     text-decoration: none;
