--- a/css/style.css
+++ b/css/style.css
@@ -210,12 +210,14 @@ nav {
 
 /* Velkommen start */
 .velkommen {
+    margin: 7rem 0 4rem 0;
     display: flex;
     justify-content: center;
-    font-size: 150px;
+    font-size: 160px;
 }
 
 main .pv {
+    margin: 0 0 4rem 0;
     text-align: center;
     color: var(--dark-blue);
     text-align: center;
@@ -236,14 +238,14 @@ main .pv {
     color: var(--dark-blue);
     font-weight: 250;
     font-size: 50px;
-    margin: 0;
+    margin: 2rem 0 -4rem 0;
 }
 
 .solid {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
     width: 1148px;
     height: 656px;
     border-radius: 10px;
@@ -256,7 +258,7 @@ main .pv {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    /* margin: 0 6.44rem 0 6.44rem; */
+    margin: 0;
 }
 
 .kasse {
@@ -306,18 +308,19 @@ main .pv {
 }
 /* FORSIDE Vores måltidskasser slut */
 
-/* FORSIDE Vidste du start */
+/* FORSIDE Vidste du at... start */
 .nobg {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 1148px;
-    height: 656px; 
+    height: 33rem;
 } 
 
 .nobg h2 {
     text-align: center;
     font-size: 120px;
+    margin: 0 0 1.56rem 0;
 }
 
 .nobg p {
@@ -325,8 +328,9 @@ main .pv {
     font-size: 1.625rem;
     line-height: 3.125rem;
     color: var(--dark-blue);
+    margin: 0;
 }
-/* FORSIDE Vidste du slut */
+/* FORSIDE Vidste du at... slut */
 
 /* FORSIDE Sådan fungerer det start */
 .kant h2 {
@@ -335,6 +339,7 @@ main .pv {
     color: var(--dark-blue);
     font-weight: 250;
     font-size: 50px;
+    margin: 0 0 4rem 0;
 }
 
 .kant {
@@ -391,7 +396,7 @@ main .pv {
     letter-spacing: 2px;
     color: var(--dark-blue);
     font-weight: 250;
-    font-size: 50px;
+    font-size: 80px;
 }
 
 .faqa {
@@ -423,6 +428,8 @@ main .pv {
 }
 
 .faqa .sporgsmal .svar {
+    display: flex;
+    align-items: center;
     margin: 1rem;
     font-size: 1.25rem;
     width: 40.1875rem;
@@ -434,9 +441,20 @@ main .pv {
 /* FORSIDE FAQ slut */
 
 /* FORSIDE Anmeldelser + Bæredygtighed start */
+.ae {
+    display: inline-block;
+    letter-spacing: -6px;
+    margin: 0 6px 0 3px;
+}
 .kanta {
     display: flex;
     flex-direction: row;
+}
+
+.kantak h2 {
+    font-size: 60px;
+    margin-bottom: 1.94rem;
+    z-index: 2; 
 }
 
 .kantak {
@@ -448,6 +466,7 @@ main .pv {
     height: 21.875rem;
     border-radius: 10px;
     border: 3px solid var(--dark-blue);
+    margin: 2.5rem;
 }
 
 .kantak p {
@@ -458,10 +477,39 @@ main .pv {
 .kantak .genbrugf {
     width: 11.375rem;
     height: 11.375rem;
+    margin: -4rem 0 -1rem 0;
+    z-index: 3;
 }
 /* FORSIDE Anmeldelser + Bæredygtighed slut */
 
 /* FORSIDE Tilmeld dig her start */
+.solidt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 1148px;
+    height: 656px;
+    border-radius: 10px;
+    border: 3px solid var(--dark-blue);
+    background: var(--light-blue);
+    margin: 8rem 0 6.19rem 0;
+}
+
+.solidt h2 {
+    font-size: 90px;    
+}
+
+.tilmeldk {
+    width: 17.25rem;
+    height: 5rem;
+    border-radius: 0.625rem;
+    font-size: 2.25rem;
+    color: var(--beige);
+    background-color: var(--dark-blue);
+    margin: 3.75rem;
+}
+
 .tilmeldkasse {
     display: flex;
     flex-direction: row;
@@ -469,7 +517,7 @@ main .pv {
     align-items: center;
 }
 
-.solid input {
+.solidt input {
     color: var(--dark-blue);
     width: 23.3125rem;
     height: 4.25rem;
@@ -477,6 +525,7 @@ main .pv {
     border: 2px solid var(--dark-blue);
     background: var(--beige);
     padding: 1.81rem;
+    margin: 2.25rem 0 0 0;
 }
 
     /* Gør at placeholdertekst i input feltet er mørke blå */
@@ -492,7 +541,6 @@ main .pv {
 
 .inputborder {
     display: flex;
-    padding: 2rem;
     width: 27.5625rem;
     height: 25rem;
     border-radius: 0.625rem;
@@ -502,9 +550,10 @@ main .pv {
     margin: 2rem;
 }
 
-.solid .kassef {
+.solidt .kassef {
     width: 25.125rem;
     height: 21.5625rem;
+    margin: 1rem 0 0 1rem;
 }
 /* FORSIDE Tilmeld dig her slut */
 
